# tire_model

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: cmake-single-platform.yml
examples/: example_usage.cpp  sample.tir
include/tire_model/: tire_model.hpp  tire_types.hpp
include/tire_model/internal/: tire_file_parser.hpp  tire_mf612.hpp  tire_model_base.hpp
include/tire_model/internal/mf612/: tire_mf612.hpp
src/: math_utils.hpp  tire_file_parser.cpp  tire_file_parser.hpp  tire_model.cpp  tire_model_base.cpp  tire_model_base.hpp
src/internal/: tire_file_parser.cpp
src/mf612/: tire_mf612.cpp  tire_mf612.hpp
src/pac2002/: tire_pac2002.cpp  tire_pac2002.hpp
tests/: test_tire_mf612.cpp  test_tire_model.cpp  test_tire_pac2002.cpp
